--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/dagre": "^0.7.48",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.1.8"
   }
 }
